Name:                hedgewars-server
Version:             0.1
Synopsis:            hedgewars server
Description:         hedgewars server
Homepage:            https://www.hedgewars.org/
License:             GPL-2
Author:              unC0Rr
Maintainer:          a.korotaev@hedgewars.org
Category:            Game
Build-type:          Simple
Cabal-version:       >=1.10


Executable hedgewars-server
  main-is: hedgewars-server.hs

  default-language:    Haskell2010

-- Don't forget to update INSTALL.md when you change these dependencies!
  Build-depends:
    base >= 4.8,
    containers,
    vector,
    bytestring,
    network >= 2.3,
    random,
    time,
    mtl >= 2,
    sandi,
    hslogger,
    process,
    deepseq,
    utf8-string,
    SHA,
    entropy,
    zlib >= 0.5.3 && < 0.6,
    regex-tdfa,
    binary >= 0.8.5.1,
    yaml >= 0.8.30,
    aeson,
    text >= 1.2

  if !os(windows)
    build-depends: unix

  ghc-options: -O2
